--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -24,13 +24,13 @@ endmacro(add_a_unit_test)
 
 # == Define the root tests.
 #add_a_unit_test(singleton)
-#add_a_unit_test(message)
-#add_a_unit_test(module)
-#add_a_unit_test(module_pool)
-#add_a_unit_test(module_designation)
+add_a_unit_test(message)
+add_a_unit_test(module)
+add_a_unit_test(module_pool)
+add_a_unit_test(module_designation)
 #add_a_unit_test(tunnel)
 #add_a_unit_test(util)
 #add_a_unit_test(dispatcher)
 add_a_unit_test(plugin)
 add_a_unit_test(library)
-#add_a_unit_test(version)
+add_a_unit_test(version)
