test: Improve test suite.
  * test: Try reordering the deps.
  * test: Split out each package into own line.
  * test: Add COVERALLS_TOKEN.
  * test: Ensure that coveralls gets coverage data.
  * test: Include src, but exclude test.
  * test: Use script for Travis.CI.
  * test: Update test suite and bootstrap script.
  * test: Add exit codes to each command we'd want to die at.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,7 @@ before_script:
   - test/bootstrap --generate
 
 script:
-  - make all
-  - make ExperimentalTest
-  - make ExperimentalMemCheck
-  - make ExperimentalCoverage
+  - test/bootstrap --run
 
 after_success:
   - test/bootstrap --post
