--- a/test/CTestConfig.cmake.in
+++ b/test/CTestConfig.cmake.in
@@ -4,3 +4,4 @@ set(CTEST_DROP_METHOD "http")
 set(CTEST_DROP_SITE "my.cdash.org")
 set(CTEST_DROP_LOCATION "/submit.php?project=Wintermute")
 set(CTEST_DROP_SITE_CDASH TRUE)
+set(DART_VERBOSE_BUILD ON)
