[docs] Update README & INSTALL files.
  * Add INSTALL.markdown
  * Update README.markdown.
    - Add link to Neuromancer, the book.
  * Add more documentation tools and content.
    - Add Code of Conduct for the Wintermute project.
    - Introduce Doxygen generation of docs.
    - Add CMake updates to handle Doxygen and Graphviz.
    - Add Doxygen template file.
    - Made the base Doxygen configuration a bit tighter.
    - Update Doxygen configuration.
    - Add layout for documentation site.
    - Update documentation config and CMake.
    - Updat ignores, Doxygen templates and doc generation.
    - Update document generation for Wintermute.
    - Fix issue with mainpage being included.
    - Allow extra files to be loaded in for README purposes.
    - Add version file, move docs into silo.

--- a/src/wintermutecore/CMakeLists.txt
+++ b/src/wintermutecore/CMakeLists.txt
@@ -64,6 +64,22 @@ SET_TARGET_PROPERTIES(wintermutecore PROPERTIES
   DEFINE_SYMBOL "WINTERMUTE_EXPORT"
   )
 
+
+file(GLOB _extra_doc_pages
+  doc/wintermutecore/**/*.markdown)
+
+DOXYGEN_GENERATE_DOCUMENTATION(
+  TARGET           "wintermutecore"
+  BUILD_AFTER      "wintermutecore"
+  PROJECT_NAME     "Wintermute"
+  PROJECT_BRIEF    "Wintermute's core library"
+  PROJECT_VERSION  "${WINTERMUTE_VERSION}"
+  MAIN_DOC_PAGE    "${CMAKE_SOURCE_DIR}/doc/wintermutecore/Main.markdown"
+  SOURCE_DIR       "${CMAKE_CURRENT_SOURCE_DIR}"
+  EXTRA_DOC_FILES  ${_extra_doc_pages}
+)
+message("${CMAKE_SOURCE_DIR}/doc/Main.markdown")
+
 # Define symbols for deprecation.
 GENERATE_EXPORT_HEADER(wintermutecore
   PREFIX_NAME WNTR
