--- a/cmake/Doxyfile.in
+++ b/cmake/Doxyfile.in
@@ -1,5 +1,6 @@
 # Doxyfile 1.8.8
 # Date: 2014-11-12 08:58:40 EST
+# vim: set ft=conf.doxygen nospell :
 
 #---------------------------------------------------------------------------
 # Project related configuration options
@@ -13,7 +14,7 @@ PROJECT_LOGO           = "@_doxy_PROJECT_LOGO@"
 OUTPUT_DIRECTORY       =
 
 CREATE_SUBDIRS         = NO
-ALLOW_UNICODE_NAMES    = NO
+ALLOW_UNICODE_NAMES    = YES
 OUTPUT_LANGUAGE        = English
 
 BRIEF_MEMBER_DESC      = YES
@@ -58,7 +59,7 @@ HIDE_UNDOC_MEMBERS     = NO
 HIDE_UNDOC_CLASSES     = NO
 HIDE_FRIEND_COMPOUNDS  = NO
 HIDE_IN_BODY_DOCS      = YES
-INTERNAL_DOCS          = NO
+INTERNAL_DOCS          = YES
 CASE_SENSE_NAMES       = YES
 HIDE_SCOPE_NAMES       = NO
 SHOW_INCLUDE_FILES     = NO
@@ -130,14 +131,14 @@ MAX_INITIALIZER_LINES  = 30
 # will mention the files that were used to generate the documentation.
 # The default value is: YES.
 
-SHOW_USED_FILES        = YES
+SHOW_USED_FILES        = NO
 
 # Set the SHOW_FILES tag to NO to disable the generation of the Files page. This
 # will remove the Files entry from the Quick Index and from the Folder Tree View
 # (if specified).
 # The default value is: YES.
 
-SHOW_FILES             = YES
+SHOW_FILES             = NO
 
 # Set the SHOW_NAMESPACES tag to NO to disable the generation of the Namespaces
 # page. This will remove the Namespaces entry from the Quick Index and from the
@@ -241,13 +242,16 @@ WARN_LOGFILE           = "@_doxy_log_file@"
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @_doxy_SOURCE_DIR@ "@_doxy_MAIN_DOC_PAGE@" "@_doxy_EXTRA_DOC_FILES@"
+INPUT                  = @_doxy_SOURCE_DIR@ \
+                         "@_doxy_MAIN_DOC_PAGE@" \
+                         @_doxy_EXTRA_DOC_FILES@
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.cpp *.hpp
 RECURSIVE              = YES
 EXCLUDE_SYMLINKS       = YES
-EXCLUDE_PATTERNS       = "*.cc,*.hh"
-EXCLUDE_SYMBOLS        = "*Private"
+#EXCLUDE_PATTERNS       = "*.cc,*.hh"
+EXCLUDE_SYMBOLS        = "*Private" \
+                         "W_DEF*"
 EXAMPLE_PATH           = "@_doxy_EXAMPLE_PATH@"
 EXAMPLE_PATTERNS       =
 EXAMPLE_RECURSIVE      = NO
@@ -262,20 +266,20 @@ USE_MDFILE_AS_MAINPAGE = "@_doxy_MAIN_DOC_PAGE@"
 #---------------------------------------------------------------------------
 SOURCE_BROWSER         = NO
 INLINE_SOURCES         = NO
-STRIP_CODE_COMMENTS    = YES
-REFERENCED_BY_RELATION = YES
+STRIP_CODE_COMMENTS    = NO
+REFERENCED_BY_RELATION = NO
 REFERENCES_RELATION    = NO
-REFERENCES_LINK_SOURCE = YES
-SOURCE_TOOLTIPS        = YES
-VERBATIM_HEADERS       = YES
-#CLANG_ASSISTED_PARSING = NO
+REFERENCES_LINK_SOURCE = NO
+SOURCE_TOOLTIPS        = NO
+VERBATIM_HEADERS       = NO
+CLANG_ASSISTED_PARSING = YES
 #CLANG_OPTIONS          =
 
 #---------------------------------------------------------------------------
 # Configuration options related to the alphabetical class index
 #---------------------------------------------------------------------------
 ALPHABETICAL_INDEX     = YES
-COLS_IN_ALPHA_INDEX    = 5
+COLS_IN_ALPHA_INDEX    = 1
 IGNORE_PREFIX          =
 
 #---------------------------------------------------------------------------
@@ -371,25 +375,25 @@ GENERATE_RTF           = NO
 #---------------------------------------------------------------------------
 # Configuration options related to the man page output
 #---------------------------------------------------------------------------
-GENERATE_MAN           = YES
-MAN_OUTPUT             = man
-MAN_EXTENSION          = .3
-MAN_SUBDIR             =
-MAN_LINKS              = YES
+GENERATE_MAN           = NO
+#MAN_OUTPUT             = man
+#MAN_EXTENSION          = .3
+#MAN_SUBDIR             =
+#MAN_LINKS              = YES
 
 #---------------------------------------------------------------------------
 # Configuration options related to the XML output
 #---------------------------------------------------------------------------
-GENERATE_XML           = YES
-XML_OUTPUT             = xml
-XML_PROGRAMLISTING     = YES
+GENERATE_XML           = NO
+#XML_OUTPUT             = xml
+#XML_PROGRAMLISTING     = YES
 
 #---------------------------------------------------------------------------
 # Configuration options related to the DOCBOOK output
 #---------------------------------------------------------------------------
 GENERATE_DOCBOOK       = NO
-DOCBOOK_OUTPUT         = docbook
-DOCBOOK_PROGRAMLISTING = NO
+#DOCBOOK_OUTPUT         = docbook
+#DOCBOOK_PROGRAMLISTING = NO
 
 #---------------------------------------------------------------------------
 # Configuration options for the AutoGen Definitions output
@@ -400,9 +404,9 @@ GENERATE_AUTOGEN_DEF   = NO
 # Configuration options related to the Perl module output
 #---------------------------------------------------------------------------
 GENERATE_PERLMOD       = NO
-PERLMOD_LATEX          = NO
-PERLMOD_PRETTY         = NO
-PERLMOD_MAKEVAR_PREFIX =
+#PERLMOD_LATEX          = NO
+#PERLMOD_PRETTY         = NO
+#PERLMOD_MAKEVAR_PREFIX =
 
 #---------------------------------------------------------------------------
 # Configuration options related to the preprocessor
@@ -411,9 +415,9 @@ ENABLE_PREPROCESSING   = YES
 MACRO_EXPANSION        = YES
 EXPAND_ONLY_PREDEF     = NO
 SEARCH_INCLUDES        = YES
-INCLUDE_PATH           = @_doxy_SOURCE_PATH@
+INCLUDE_PATH           = "@_doxy_SOURCE_DIR@"
 INCLUDE_FILE_PATTERNS  =
-PREDEFINED             =
+PREDEFINED             = DOXYGEN_SKIP
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = NO
 
