[core] Implement basis of procedure calling.
  * Move Dispatcher class to be sub-class of Tunnel.
  * Move Receiver class to be sub-class of Tunnel.
  * Chang bits of test to handle checking of sent messages.
  * Add source files for Tunnel.
  * Add tests for dispatcher, receiver and tunnel.
  * Update dependencies, module code and tests.
  * Add astyle.
  * Add method to inject calls into a module.
  * Introduce Wintermute::Util::Invokable.

    Wrote out base class for Invokable utility class. This allows classes
    in Wintermute to share a foundation of invocation logic without
    having to rely too much on machine implementation.
  * Improve Wintermute::Module.

    Reintroduced the Call header, thus fleshing out the structure of what
    Module::Call would look like.

  * Expand docs in Wintermute::Util::Serializable.

    Expanded documentation in Wintermute::Util::Serializable so that it
    became more clear how it was meant to be used. It exposed a few
    fallacies with the interface and some places we can improve it.

  * Nuke obselete code from Wintermute::Call.

    Removed a block of documentation that wasn't relevant to
    Wintermute::Call anymore and pulled out declarations of functions
    that weren't meant to be defined in Wintermute::Call.

  * Add source code for Wintermute::Util::Serializable.
  * Add source code for Wintermute::Util::Invokable.
  * Add code for MethodCall.
  * Add Module::removeCall().
  * test: Fix plugin test.

    In order to get the plugin and library tests working; I had to
    disable logging since the logging handle seems to be destroyed before
    the Plugin and Library dtors can get to it.
  * core: Add overriding argument usage.

    Method objects can now directly use the arguments provided to them or
    have arguments passed in its place.

  * core: Made 'Wintermute::Method' serializable.
  * Correct variable names to prevent confusion.
  * doc: Move doc into Wintermute's library doc directory.
  * doc: Update 

--- a/src/wintermutecore/CMakeLists.txt
+++ b/src/wintermutecore/CMakeLists.txt
@@ -23,29 +23,43 @@ PROJECT(WintermuteCore CXX)
 include(WintermuteMacros)
 
 set(_srcs
-  # Natives
+  # == Natives
   ./logging.cpp
-  ./util/serializable.cpp
   ./version.cpp
 
-  # Procedural
-  ./message.cc
-  ./message.cpp
-  ./module.cpp
-  ./module.cc
-  ./module_designation.cc
-  ./module_designation.cpp
-  ./module_pool.cc
-  ./module_pool.cpp
-  #./dispatcher.cpp
-  #./receiver.cpp
-  #./tunnel.cpp
-
-  # == Plugin related.
+  # == Plugin Related
   ./library.cc
-  ./library.cpp
   ./plugin.cc
+  ./library.cpp
   ./plugin.cpp
+
+  # == RPC Related
+  ./tunnel.cc
+  ./tunnel_dispatcher.cc
+  ./tunnel_receiver.cc
+  ./tunnel.cpp
+  ./tunnel_dispatcher.cpp
+  ./tunnel_receiver.cpp
+
+  # == Procedure Related
+  ./message.cc
+  ./call.cc
+  ./method.cc
+  ./message.cpp
+  ./call.cpp
+  ./method.cpp
+
+  # == Module Related
+  ./module.cc
+  ./module_pool.cc
+  ./module_designation.cc
+  ./module.cpp
+  ./module_designation.cpp
+  ./module_pool.cpp
+  ./module_call.cpp
+
+  # == Utilities
+  ./util/serializable.cpp
   )
 
 # Set up sources.
@@ -64,9 +78,8 @@ SET_TARGET_PROPERTIES(wintermutecore PROPERTIES
   DEFINE_SYMBOL "WINTERMUTE_EXPORT"
   )
 
-
-file(GLOB _extra_doc_pages
-  doc/wintermutecore/**/*.markdown)
+file(GLOB _extra_doc_files
+  "${CMAKE_SOURCE_DIR}/doc/wintermutecore/*.markdown")
 
 DOXYGEN_GENERATE_DOCUMENTATION(
   TARGET           "wintermutecore"
@@ -76,9 +89,8 @@ DOXYGEN_GENERATE_DOCUMENTATION(
   PROJECT_VERSION  "${WINTERMUTE_VERSION}"
   MAIN_DOC_PAGE    "${CMAKE_SOURCE_DIR}/doc/wintermutecore/Main.markdown"
   SOURCE_DIR       "${CMAKE_CURRENT_SOURCE_DIR}"
-  EXTRA_DOC_FILES  ${_extra_doc_pages}
+  EXTRA_DOC_FILES  ${_extra_doc_files}
 )
-message("${CMAKE_SOURCE_DIR}/doc/Main.markdown")
 
 # Define symbols for deprecation.
 GENERATE_EXPORT_HEADER(wintermutecore
