--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -28,9 +28,16 @@ add_a_unit_test(message)
 add_a_unit_test(module)
 add_a_unit_test(module_pool)
 add_a_unit_test(module_designation)
-#add_a_unit_test(tunnel)
-#add_a_unit_test(util)
-#add_a_unit_test(dispatcher)
+add_a_unit_test(call)
+#add_a_unit_test(signal)
+#add_a_unit_test(signalable)
+#add_a_unit_test(reply_call)
+#add_a_unit_test(signal_call)
+add_a_unit_test(tunnel)
+add_a_unit_test(tunnel_dispatcher)
+add_a_unit_test(tunnel_receiver)
+add_a_unit_test(util)
+add_a_unit_test(method)
 add_a_unit_test(plugin)
 add_a_unit_test(library)
 add_a_unit_test(version)
