--- a/cmake/plugin_driver.hh.in
+++ b/cmake/plugin_driver.hh.in
@@ -16,13 +16,22 @@
  */
 
 #include <cxxtest/TestSuite.h>
+#include <wintermutecore/plugin.hpp>
 #include "test_suite.hpp"
+
+#define PLUGIN_TEST_PATH "@_wpv_file@"
+
+using Wintermute::Plugin;
 
 class PluginVerifyTestSuite : public CxxTest::TestSuite
 {
 public:
-  void testExample()
+  void testWorkWithPlugin()
   {
-    TS_ASSERT_EQUALS ( 1, 1 );
+    Plugin::Ptr pluginPtr = Plugin::find(PLUGIN_TEST_PATH);
+    TSM_ASSERT ( "Plugin was loaded from disk.", pluginPtr );
+    TSM_ASSERT ( "Plugin was released from memory.", Plugin::release(pluginPtr->name()) );
   }
-}
+};
+
+
