[test] Update ignores for testing.
  * Ensure all code can have testing tgts.
  * Update test include generator.
  * Cosmetic change to unit test CMake.

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ CTestConfig.cmake
 *.orig
 CTestConfig.cmake
 src/wintermutecore/globals.hpp
-test/include/test_suite.hpp
+*/*/test_suite.hpp
 .vagrant/*
