--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,12 @@ PROJECT(Wintermute)
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 INCLUDE(defaults)
 
+# Enable testing.
+ENABLE_TESTING()
+INCLUDE(CTest)
+
 # Include the source code for the project.
 ADD_SUBDIRECTORY(src)
 
 # Include the test suite.
-ENABLE_TESTING()
-INCLUDE(CTest)
 ADD_SUBDIRECTORY(test)
