[cmake] Add 'WintermuteSourceBuild.cmake'.
  * Add CMake file to determine if we're in a source build of
    Wintermute.
  * Deliniated the root library.
  * Move test logic to 'WintermuteTest'.
  * Toggle test includes for src build.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,43 +18,8 @@
 # Boston, MA 02111-1307, USA.
 ###############################################################################
 
-#== Include things we'll need.
+INCLUDE(WintermuteTest)
 
-if (BUILD_TESTING)
-  INCLUDE(WintermuteTestMacros)
-
-  SET(WINTERMUTE_TEST_INCLUDE_DIRS
-    ${CXXTEST_INCLUDE_DIR}
-    ${CMAKE_SOURCE_DIR}/test/include
-    ${CMAKE_SOURCE_DIR}/src
-    ${CMAKE_BINARY_DIR}/src
-    ${CMAKE_BINARY_DIR}/src/wintermutecore
-    )
-
-  CONFIGURE_FILE(include/test_suite.hpp.in
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/test_suite.hpp @ONLY)
-
-  CONFIGURE_FILE(CTestConfig.cmake.in ${CMAKE_SOURCE_DIR}/CTestConfig.cmake
-    @ONLY)
-
-  ADD_SUBDIRECTORY(fixtures)
-  ADD_SUBDIRECTORY(unit)
-  ADD_SUBDIRECTORY(features)
-
-  # Use Valgrind for memory checking.
-  set(CMAKE_MEMORYCHECK_COMMAND valgrind)
-  set(CMAKE_MEMORYCHECK_COMMAND_OPTIONS
-    "--error-exitcode=1 --leak-check=full --show-reachable=yes --track-origins=yes -q")
-
-  set(MEMORYCHECK_COMMAND
-    "${CMAKE_MEMORYCHECK_COMMAND} ${CMAKE_MEMORYCHECK_COMMAND_OPTIONS}")
-  separate_arguments(MEMCHECK_COMMAND) 
-endif()
-
-#== Handle work if we're in CI mode.
-option(CI_BUILD "CI build.  Extra compilation flags will be set." OFF)
-
-if(CI_BUILD)
-  message(STATUS "CI build enabled; all warnings have been elevated to errors.")
-  add_definitions(-Werror)
-endif()
+ADD_SUBDIRECTORY(fixtures)
+ADD_SUBDIRECTORY(unit)
+ADD_SUBDIRECTORY(features)
