zmq: Implement ZeroMQ logic for Wintermute.
  * zmq: Add skeleton for ZMQReceiver & ZMQDispatcher.
  * zmq: Hard code dependencies; start on logic.
  * zmq: Implement publish-subscribe model.
  * zmq: Add test for using the Tunnel with ZeroMQ.
  * zmq: Fleshed out ZMQDispatcher, ZMQReceiver and ZMQPlugin.
  * zmq: Add more globals.
  * zmq: Correct logic between subscription and connection for ZMQReceiver.
  * zmq: Allow setting of IPC address.
  * zmq: Update test for transport-zeromq.
  * zmq: Update CMake info.
  * zmq: Add filter as constant for transport-zeromq.
  * zmq: Tighten logic for ZMQDispatcher & ZMQReceiver.
  * zmq: Solidify ZMQPlugin.
  * test: Write out test to simulate use of Tunnel.
  * cmake: Update transport-zeromq's project CMake file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,15 +21,12 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 PROJECT(Wintermute)
 
 # Add our CMake files into the mix.
-SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 INCLUDE(defaults)
 
 # Enable testing.
 ENABLE_TESTING()
 INCLUDE(CTest)
 
-# Include the source code for the project.
 ADD_SUBDIRECTORY(src)
-
-# Include the test suite.
 ADD_SUBDIRECTORY(test)
