--- a/src/wintermute-transport-zeromq/CMakeLists.txt
+++ b/src/wintermute-transport-zeromq/CMakeLists.txt
@@ -21,8 +21,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 PROJECT(WintermtueTransportZeroMQ CXX)
 
 include(WintermutePlugin)
+FIND_PACKAGE(ZeroMQCXX REQUIRED)
 
-SET(WINTERMUTE_ZMQ_VERSION 0.0.1-dev)
+SET(WINTERMUTE_ZMQ_VERSION     0.0.1-dev)
+SET(WINTERMUTE_ZMQ_IPC_ADDRESS ${CMAKE_CURRENT_BINARY_DIR}/wintermute.sock)
 
 SET(_srcs
   plugin.cpp
@@ -40,8 +42,12 @@ ADD_LIBRARY(transport-zmq
   )
 
 TARGET_LINK_LIBRARIES(transport-zmq
-  ${ZEROMQ_LIBS}
+  ${ZEROMQ_LIBS} zmqpp zmq
   )
+
+TARGET_INCLUDE_DIRECTORIES(transport-zmq
+  PUBLIC ${ZEROMQ_INCLUDE_DIRS}
+)
 
 WINTERMUTE_PLUGIN_DECLARE(
   NAME   transport-zmq
