core: Update logic for core Wintermute library for ZeroMQ.
  * core: Add assignment operator to Util::Serializable.
  * core: Prevent generated headers from being committing.
  * core: Move more logic into private definitions.
  * core: Made use of Emitter in the Tunnel.
  * core: Remove concept of queued up Message stack.
  * core: Add start/stop state to Receiver.
  * core: Add start/stop state to Dispatcher.
  * core: Allow for base handling of Messages for Receiver.
  * core: Remove private global header for Wintermute.
  * core: Clean up whitespace in Module.
  * core: Move to 'class' from 'struct'.
  * core: Add checks into Plugin & Library.
  * core: Write error out to log on plugin fail.
  * core: Made distinction between states for Library.
  * core: Update global header for Wintermute.
  * core: Made functions more clear.
  * core: Add handle for checking libuv calls.
  * core: Improve event system for Wintermute.
  * core: Move event names to be global constants.
  * core: Tie in more logging for the poller.
  * core: Allow deserialization of Message using operator=.
  * core: Allow dispatchers & receivers to be removed.
  * core: Remove duplicate function call in Tunnel.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/*
 CTestConfig.cmake
 *.orig
 CTestConfig.cmake
-src/**/globals.hpp
-test/**/test_suite.hpp
+**/**/globals.hpp
+**/**/test_suite.hpp
 .vagrant/*
+**/wintermute.log
