--- a/src/wintermutecore/globals.hpp.in
+++ b/src/wintermutecore/globals.hpp.in
@@ -19,21 +19,23 @@
 #ifndef WINTERMUTE_CORE_GLOBALS_HPP
 #define WINTERMUTE_CORE_GLOBALS_HPP
 
-#include "wintermute_export.hpp"
+#include <cxxabi.h>
 #include <cassert>
 #include <cstdlib>
 #include <cstdio>
-#include <cxxabi.h>
+#include <sstream>
 #include <initializer_list>
 #include <memory>
 #include <stdexcept>
 #include <string>
-#include <sys/types.h>
 #include <type_traits>
+#include <sys/types.h>
 #include <unistd.h>
+#include "wintermute_export.hpp"
 
 using std::string;
 using std::make_shared;
+using std::to_string;
 
 #define WINTERMUTE_VERSION              "@WINTERMUTE_VERSION@"
 #define WINTERMUTE_CONFIG_INCLUDE_DIR   "@WINTERMUTE_CONFIG_INCLUDE_DIR@"
@@ -59,14 +61,26 @@ using std::make_shared;
   using _Prv = Class##Private; \
   friend _Prv; \
   SharedPtr<_Prv> d_ptr = nullptr; \
-  inline _Prv* d_func() const { return d_ptr.get(); } \
-  inline _Prv* d_func() { return d_ptr.get(); }
+  inline _Prv* d_func() const { \
+    assert(d_ptr); \
+    return d_ptr.get(); \
+  } \
+  inline _Prv* d_func() { \
+    assert(d_ptr); \
+    return d_ptr.get(); \
+  }
 
 #define W_DEF_PRIVATE_PREDECL(_Class) \
-  using _Pub = Class; \
-  SharedPtr<_Pub> d_ptr; \
-  inline _Pub* d_func() const { return d_ptr.get(); } \
-  inline _Pub* d_func() { return d_ptr.get(); }
+  using _Prv = Class; \
+  SharedPtr<_Prv> d_ptr; \
+  inline _Prv* d_func() const { \
+    assert(d_ptr); \
+    return d_ptr.get(); \
+  } \
+  inline _Prv* d_func() { \
+    assert(d_ptr); \
+    return d_ptr.get(); \
+  }
 
 
 /// Defines inline instance-level methods to handle public instance data.
@@ -74,22 +88,38 @@ using std::make_shared;
   using _Pub = Class; \
   friend _Pub; \
   SharedPtr<_Pub> q_ptr; \
-  inline _Pub* q_func() const { return q_ptr.get(); } \
-  inline _Pub* q_func() { return q_ptr.get(); } \
+  inline _Pub* q_func() const { \
+    assert(q_ptr); \
+    return q_ptr.get(); \
+  } \
+  inline _Pub* q_func() { \
+    assert(q_ptr); \
+    return q_ptr.get(); \
+  }
 
 #define W_DEF_PUBLIC_PREDECL(_Class) \
   using _Pub = Class; \
   SharedPtr<_Pub> q_ptr; \
-  inline _Pub* q_func() const { return q_ptr.get(); } \
-  inline _Pub* q_func() { return q_ptr.get(); } \
+  inline _Pub* q_func() const { \
+    assert(q_ptr); \
+    return q_ptr.get(); \
+  } \
+  inline _Pub* q_func() { \
+    assert(q_ptr); \
+    return q_ptr.get(); \
+  }
 
 /// Provides a shortcut to grab private data for an object with private data.
 #define W_PRV(Class) Class##Private* const d = d_func();
 #define W_PRVP(_Class) _Class* const d = d_func();
 
 /// Provides a shortcut to grab private data for an static object with private data.
-#define W_SPRV(Class) Class##Private* const d = Class::instance()->d_func();
-#define W_SPRVP(_Class, Class) _Class* const d = Class::instance()->d_func();
+#define W_SPRV(Class) \
+  assert(Class::instance()); \
+  Class##Private* const d = Class::instance()->d_func();
+#define W_SPRVP(_Class, Class) \
+  assert(Class::instance()); \
+  _Class* const d = Class::instance()->d_func();
 
 /// Provides a shortcut to grab public data for an object with public data.
 #define W_PUB(Class) Class* const q = q_func();
@@ -128,11 +158,23 @@ using std::make_shared;
     }
 
 /**
- * Declares the instance of the singleton as a null pointer 
+ * Declares the instance of the singleton as a null pointer
  * @ingroup Singletons
  */
 #define W_DECLARE_SINGLETON(Class) \
   SharedPtr<Class> Class::_instance(nullptr);
+
+/**
+ * Helps with handling libuv errors.
+ */
+#define W_CHECK_UV(r, call)   \
+  if (r != 0) \
+  { \
+    std::ostringstream oStr; \
+    oStr << "[" << call << "] uverr: " << uv_err_name(r) << " - " << uv_strerror(r); \
+    werror(oStr.str()); \
+    abort();\
+  }
 
 // {{{ Platform-specific types
 
